[project]
name = "puku-monorepo"
version = "0.1.0"
description = "A comprehensive machine learning library."
authors = [
    {name = "curlink19",email = "p.kurochkin200@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
puku-core = {path = "libs/core"}
puku = {path = "libs/puku"}

