[project]
name = "puku-monorepo"
version = "0.1.0"
description = "A comprehensive machine learning library."
authors = [
    {name = "curlink19",email = "p.kurochkin200@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "puku-core @ libs/core",
    "puku @ libs/puku",
    "puku-deployment @ libs/deployment",
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-material (>=9.6.15,<10.0.0)",
    "mkdocstrings[python] (>=0.29.1,<0.30.0)",
    "mkdocs-autorefs (>=1.4.2,<2.0.0)",
    "mkdocs-gen-files (>=0.5.0,<0.6.0)",
    "mlflow (>=3.1.1,<4.0.0)",
    "grandalf (>=0.8,<0.9)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
puku-core = {develop = true}
puku = {develop = true}
