[project]
name = "puku-core"
version = "0.1.0"
description = ""
authors = [
    {name = "curlink19",email = "p.kurochkin200@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langchain-core (>=0.3.61,<0.4.0)",
    "langgraph (>=0.4.7,<0.5.0)",
    "marko @ git+https://github.com/curlinkw/marko.git@develop"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"

