[project]
name = "puku-deployment"
version = "0.1.0"
description = ""
authors = [
    {name = "curlink19",email = "p.kurochkin200@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)",
    "transformers (>=4.52.4,<5.0.0)",
    "optimum[exporters] (>=1.26.1,<2.0.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "accelerate (>=1.8.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
