[project]
name = "puku"
version = "0.1.0"
description = ""
authors = [
    {name = "curlink19",email = "p.kurochkin200@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
langchain-core = "^0.3.34"
puku-core = {path = "../core", develop = true}


[tool.poetry.group.test.dependencies]
langchain-core = "^0.3.34"
pytest = "^8.3.4"

