[project]
name = "puku"
version = "0.1.0"
description = ""
authors = [
    {name = "curlink19",email = "p.kurochkin200@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "puku-core @ file:///home/curlinkw/workspace/projects/puku/libs/core",
    "langchain-deepseek (>=0.1.3,<0.2.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-experimental (>=0.3.4,<0.4.0)",
    "langchain-neo4j (>=0.4.0,<0.5.0)",
    "langgraph (>=0.4.7,<0.5.0)",
    "docker (>=7.1.0,<8.0.0)",
    "tritonclient (>=2.59.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
puku-core = {develop = true}
